--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -6,6 +6,7 @@
 | Baker, P    | 3386 C:509-768-5922 |
 | Belsher     | 3765                |
 | Bertagnolli | 3313                |
+| Caetano     | 3768                |
 | Charette    | 3852                |
 | Crabtree    | 3372                |
 | Cunningham  | 3796                |
