--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -49,3 +49,8 @@ your freedom to choose. Thornton Wilder
 "Courage is fear holding on a minute longer." George S. Patton
 "It is the chiefest point of happiness that a man is willing to be what he is." Desiderius Erasmus
 "There is only one way to avaoid criticism: do nothing, say nothing, and be nothing." - Aristotle
+Alcohol, Tobacco and Firearms should be a convenience store, not a government agency!
+"The price of greatness is responsibility." - Winston Churchill
+"There is much pleasure to be gained from useless knowledge." - Bertrand Russell
+"Trying is the first step to failure."
+"Any sufficiently advanced technology is indistinguishable from magic." - Arthur C Clarke
