--- a/diary/2015-03-27.wiki
+++ b/diary/2015-03-27.wiki
@@ -11,3 +11,17 @@ BRPC CN2 - Per Chris, Heather is indicating an 18 week duration. PMAC estimate s
 Loaded Piping Engineer hours into PSE for CN1 per direction from Bryan Olson. Sent and 001 report for review/confirmation.
 
 Discussed with Dan Lewis the challenges of BRPC reporting Each BRPC job has a different rate table. Also, when new employees are added, they are not categorized until the end of the month when invoices are prepared. Werner Plagge makes the category determination.
+
+Attende dModule 63 Kickoff meeting.
+	Procurement Issues
+		BIG PROBLEMS HERE
+			Lack of Transparency - MANY ISSUES - See Comp Book Notes
+	PMAC Reporting:
+		Start with weekly cost and scheudle/progress updates.
+			Cynthia understands that this will burn available budget early; will entertain additional hours when needed.
+		Go to L3 schedule with addition of Module 65
+		Go to L4 schedule with addition of Module 05 (very likely.)
+		Schedule to include critical Anvil procurement.
+		Schedule updates to show 2 weeks back and 3 weeks forward.
+		How to interface with AES schedule (they have the master schedule.)
+			Cynthia to provide scheduling contact at AES.
