--- a/106726.wiki
+++ b/106726.wiki
@@ -47,6 +47,7 @@
 		* [[c:/Users/jdavis2/Dropbox/vimwiki/Schedule Update Log - DD2015-01-25.wiki]]
 		* [[CriticalPathAnalysis_DD01252015]]
 	* [[Schedule Update - DD2015-02-08]]
+	* [[Critical Path Statement - DD03292015]]
 	 
 * Schedule Change Notices
 	* [[January2015]]
