--- a/NDS-1 Schedule Update Checklist.wiki
+++ b/NDS-1 Schedule Update Checklist.wiki
@@ -25,14 +25,13 @@ NDS-1 Schedule Update Checklist
               * [ ] ANV.442.010.PMAC.025	Procurement Coordination
         * [ ] Reset the above activities to Task Dependent
 * [ ] Verify that the schedule log is clean. Resolve any issues.
-* [ ] Re-assign the official project baseline (IFR 5/25).
+* [ ] Re-assign the official project baseline (CN31 IFA Rev 2)
 * [ ] Save an update baseline.
 * [ ] Create a copy of the project. Include the IFR BL when copying.
 * [ ] Delete the Module Fabrication WBS.
 * [ ] Export XER for Transmittal to Caelus. 
 * [ ] Back in the master schedule:
         * [ ] PDF Schedule w/o Module Fabrication WBS.
-        * [ ] PDF 8 Week PO Look Ahead
         * [ ] PDF IFF Milestone Layout for Don Redick.
                 * [ ] Set Project Baseline to IFR BL
                 * [ ] Set Primary BL to Last Update BL
