--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -54,3 +54,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "There is much pleasure to be gained from useless knowledge." - Bertrand Russell
 "Trying is the first step to failure."
 "Any sufficiently advanced technology is indistinguishable from magic." - Arthur C Clarke
+"A life spent making mistakes is not only more honorable, but more useful than a life spent doing nothing." - George Bernard Shaw
