--- a/diary/2015-04-02.wiki
+++ b/diary/2015-04-02.wiki
@@ -1,3 +1,5 @@
 Arrive 0730.
 
 Did some vimwiki maintenance. Moved BRPC wiki home folder under main vimwiki folder.
+
+Gave Tom a quick overview of BRPC reporting package.
