--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -55,3 +55,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Trying is the first step to failure."
 "Any sufficiently advanced technology is indistinguishable from magic." - Arthur C Clarke
 "A life spent making mistakes is not only more honorable, but more useful than a life spent doing nothing." - George Bernard Shaw
+"Failure is the key to success; each mistake teaches us something." - Morihei Ueshiba
+"If you don't think every day is a good day, just try missing one." - Cavett Robert
