--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -57,3 +57,6 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "A life spent making mistakes is not only more honorable, but more useful than a life spent doing nothing." - George Bernard Shaw
 "Failure is the key to success; each mistake teaches us something." - Morihei Ueshiba
 "If you don't think every day is a good day, just try missing one." - Cavett Robert
+"Quality is not an act, it is a habit." - Aristotle
+"It's better to be a lion for a day than a sheep all your life." - Elizabeth Kenny
+"Democracy is the art and science of running the circus from the monkey cage." - H.L. Mencken
