--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -15,6 +15,8 @@ Caelus:
 
 11:30 - 12:30 BRPC Team Meeting
 
+* [ ] Complete and Approve Time Sheet
+
 = Tuesday =
 BRPC:
 * [ ] Run and issue cost report for 107278.
@@ -26,6 +28,8 @@ BRPC:
 		Mike Moora
 		Terry Caetano
 		Werner Plagge
+* [ ] Run informational 014, 018, and 006 reports for the prior period
+* [ ] Update Project Go Binder
 
 Caelus:
 * [ ] Run PSR; update any Issued POs.
@@ -38,12 +42,16 @@ Caelus:
 11:00 - 12:00 OTP Team Meeting
 15:00 - 16:00 NDS-1 Team Meeting
 
+* [ ] Complete and Approve Time Sheet
+
 = Wednesday =
 * [ ] Update schedule with IPDMS Exception Report data
 * [ ] Cost report ready for review by PC Leads
 
 11:00 - 12:00 Caelus Program Coordination Meeting
 16:00 - 17:00 Conference Call with Quyen Kay
+
+* [ ] Complete and Approve Time Sheet
 
 = Thursday =
 * [ ] PC Leads Review cost report
@@ -55,6 +63,8 @@ Caelus:
 	* [ ] Prepare 1-Pager Milestone Schedule (WBS-WP Milestones for Remind Layout)
 		* [ ] NDS-1
 		* [ ] OTPEX
+
+* [ ] Complete and Approve Time Sheet
 
 = Friday =
 BRPC:
@@ -72,5 +82,6 @@ Caelus:
 				* [ ] Performance Chart (Banana Curve; added 071814; only sent with the last report of the month.)
 	* [ ] PL review Cost and Schedule report
 	* [ ] PA Transmit Cost and Schedule report
+
 * [ ] Complete and Approve Time Sheet
 
