--- a/MyMovieList.wiki
+++ b/MyMovieList.wiki
@@ -32,6 +32,8 @@ The Islamic State
 -Real Steel
 -The Imitation Game
 Body of Lies
--Black Mirror (Netflix Series)
++Black Mirror (Netflix Series)
 -Foxcather
 -Theory of Everything
+-Lost River
+-Living in the Age of Airplanes
