--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -31,6 +31,7 @@
 | Otero       | 3130                |
 | Plagge      | 3057                |
 | Ridenhour   | 3379                |
+| Russo       | 3153                |
 | Schramer    | 3714                |
 | Tolliver    | 3430                |
 | Wazny       | 3786                |
