--- a/BRPC/107315 Mustang Development Eng'g Services - Module 63 - Turbine Generator.wiki
+++ b/BRPC/107315 Mustang Development Eng'g Services - Module 63 - Turbine Generator.wiki
@@ -7,6 +7,7 @@
 	[[WeeklyCostReportContents]]
 	[[file:///c:/Users/jdavis2/Dropbox/reminders/BRPCMustang.rem|Remind File]]
 	[[file:///|RAGB Report]]
+	[[CostEngineerErrata]]
 
 	P4 WBS
 		400 - PMAC
