--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -60,3 +60,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Quality is not an act, it is a habit." - Aristotle
 "It's better to be a lion for a day than a sheep all your life." - Elizabeth Kenny
 "Democracy is the art and science of running the circus from the monkey cage." - H.L. Mencken
+"Talent does what it can; genius does what it must." - Edward G. Bulwer-Lytton
