--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -12,6 +12,7 @@
 | Cunningham  | 3796                |
 | Dyer        | 3444                |
 | Eaton       | 3606                |
+| Emplit      | 3635                |
 | Evancho     | 3520                |
 | Formway     | 3364                |
 | Guevara     | 3490                |
