--- a/MyReadingList.wiki
+++ b/MyReadingList.wiki
@@ -1,6 +1,6 @@
 The Lost Men by Kelly Tyler Lewis
 Daniel Schulman's Sons of Wichita: How the Koch Brothers Became America's Most Powerful and Private Dynasty
-*Walter Isaacsen - The Innovators
+**Walter Isaacsen - The Innovators
 Road to Gold By Lt. Commander William H. Labarge
 Elizabeth Kolbert's Sixth Extinction
 The Quest
