--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -61,3 +61,7 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "It's better to be a lion for a day than a sheep all your life." - Elizabeth Kenny
 "Democracy is the art and science of running the circus from the monkey cage." - H.L. Mencken
 "Talent does what it can; genius does what it must." - Edward G. Bulwer-Lytton
+"Try not to become a man of success, but rather try to become a man of value." - Albert Einstein
+"Silence is a source of great strength." - Lao Tzu
+"Why do you have to be a nonconformist like everybody else?" - James Thurber
+"If you must have motivation, think of your paycheck on Friday." - Noel Coward
