--- a/BRPC/BurnUpChartPreparation.wiki
+++ b/BRPC/BurnUpChartPreparation.wiki
@@ -10,7 +10,7 @@
 		Select All and Copy
 		Switch back to the Burn Up Chart workbook and Paste the Reporting data into cell A1 on the Reporting Data tab.
 		Manually enter the Cumulative Plan values in Column AB.
-		Switch to the Report tab and place your curser ina cell in the pivot table. Click Alt-F5 to update the pivot table.
+		Switch to the Report tab and place your cursor in a cell in the pivot table. Click Alt-F5 to update the pivot table.
 		PDF and save to the reports folder.
 		Save and CLose the Actuals workbook.
 		
