--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -65,3 +65,14 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Silence is a source of great strength." - Lao Tzu
 "Why do you have to be a nonconformist like everybody else?" - James Thurber
 "If you must have motivation, think of your paycheck on Friday." - Noel Coward
+"All truths are easy to understand once they are discovered; the point is to discover them." - Galileo Galilei
+“Never impose on others what you would not choose for yourself.” - Confucious
+“Real knowledge is to know the extent of one’s ignorance.” - Confucious
+“I hear and I forget. I see and I remember. I do and I understand.” - Confucious
+“Everything has beauty, but not everyone sees it.” - Confucious
+“The Superior Man is aware of Righteousness, the inferior man is aware of advantage.” - Confucious
+“Wheresoever you go, go with all your heart.” - Confucious
+“Our greatest glory is not in never falling, but in getting up every time we do.” - Confucious
+“He who learns but does not think, is lost. He who thinks but does not learn is in great danger.” - Confucious
+“He that would perfect his work must first sharpen his tools.” - Confucious
+“If you look into your own heart, and you find nothing wrong there, what is there to worry about? What is there to fear?” - Confucious
