--- a/diary/2015-04-21.wiki
+++ b/diary/2015-04-21.wiki
@@ -3,3 +3,9 @@ Arrive 0800.
 Talked to Gerry Thompson. Gerry will mark up Tracker with his desired structure.
 
 Sent email to Diane Yashiro notifying her of suspension of schedule updates on Caelus.
+
+Sent reminder to team to distribute EHTC for SJ 417.
+
+Attended NDS-1 team meeting.
+
+Issued cost report for 107278.
