--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -19,24 +19,33 @@ Caelus:
 
 = Tuesday =
 BRPC:
-* [ ] Run and issue cost report for 107315.
+* [ ] 107278 - Run and issue cost report
+	Ditribution:
+		Fred Fitzhugh
+		Mark Wiggins
+		Cynthia Geiermann
+		Gerry Thompson
+		Mike Moora
+		Terry Caetano
+* [ ] 107315 - Run and issue cost report 
 	Distribution:
-		Mark Wiggans
+		Mark Wiggins
 		Dan Gleason
 		Cynthia Geiermann
 		Raj Bhargava (Rbhargava@brpcak.com)
 		Mike Moora
 		Ron Otero
 		Chris Higgins
-* [ ] Run and issue cost report for 107278.
+* [ ] 107386 - Run and issue cost report 
 	Distribution:
-		Fred Fitzhugh
-		Mark Wiggans
+		Mark Wiggins
+		Dan Gleason
 		Cynthia Geiermann
-		Gerry Thompson
+		Raj Bhargava (Rbhargava@brpcak.com)
 		Mike Moora
-		Terry Caetano
-		Werner Plagge
+		Ron Otero
+		Chris Higgins
+
 * [ ] Run informational 014, 018, and 006 reports for the prior period
 * [ ] Update Project Go Binder
 
