--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -76,3 +76,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 “He who learns but does not think, is lost. He who thinks but does not learn is in great danger.” - Confucious
 “He that would perfect his work must first sharpen his tools.” - Confucious
 “If you look into your own heart, and you find nothing wrong there, what is there to worry about? What is there to fear?” - Confucious
+"Project Management is the art of creating the illusion that any outcome is the result of a series of predetermined deliberate acts, when in fact it was just dumb luck." - Dr. Harold Kerzner
+"Middle age is when a guy keeps turning off lights for economical rather than romantic reasons." - Lillian Gordy Carter
