--- a/diary/2015-04-24.wiki
+++ b/diary/2015-04-24.wiki
@@ -7,3 +7,8 @@ Heather requested an update on seed funding each week.
 Attended conference call to discuss revisions to Caelus re-start schedules. Brent approved charging scheduler time for this effort.
 
 Out at 1130.
+
+From home:
+Opened 6 CNs for Structural. Sent email to Structural team requesting that they enter hours in PSE.
+
+Per Julian Ruiz email, Piping will be delayed getting to IFR.
