--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -21,7 +21,7 @@ Caelus:
 = Tuesday =
 BRPC:
 * [ ] 107278 - Run and issue cost report
-	Ditribution:
+	Distribution:
 		Fred Fitzhugh
 		Mark Wiggins
 		Cynthia Geiermann
@@ -49,11 +49,9 @@ BRPC:
 
 * [ ] Run informational 014, 018, and 006 reports for the prior period
 * [ ] Update Project Go Binder
+* [ ] Updated Seed Funding Balance to Heather
 
 Caelus:
-* [ ] Run PSR; update any Issued POs.
-* [ ] Update schedule with data from Progress Tracking
-        * [[NDS-1 Schedule Update Checklist]]
 * [ ] Update Project Controls deck for team meeting
 * [ ] Update Project Go Binder
 
@@ -64,7 +62,6 @@ Caelus:
 
 = Wednesday =
 * [ ] Run final 014 and 006 reports for the reporting period
-* [ ] Update schedule with IPDMS Exception Report data
 * [ ] Cost report ready for review by PC Leads
 
 11:00 - 12:00 Caelus Program Coordination Meeting
@@ -77,20 +74,12 @@ Caelus:
 * [ ] Discipline leads submit narratives to PA
 * [ ] PL Reviews Monthly Management (Anvil) Report
 * [ ] Update [[file:///S:/Caelus/106726/Project Controls/Project Accounting/106726 - NDS-1 & OTPEX - Cost to Complete Analysis - Through WE 032015.xlsx|Cost to Complete Analysis]]
-* [ ] If monthly reporting week:
-	* [ ] Update Critical Path Analysis
-	* [ ] Prepare 1-Pager Milestone Schedule (WBS-WP Milestones for Remind Layout)
-		* [ ] NDS-1
-		* [ ] OTPEX
 
 * [ ] Complete Time Sheet
 
 = Friday =
 Caelus:
 	* [ ] PA Compile Cost and Schedule report [[Bi Weekly Report Contents]]
-		Schedule Products:
-			* [ ] Schedule Update PDF
-			* [ ] Schedule Update XER
 		Cost Engineer Products:
 			* [ ] Bi Weekly Cost Report PDF
 			* [ ] Bi Weekly Cost Report XLS
