--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -78,3 +78,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 “If you look into your own heart, and you find nothing wrong there, what is there to worry about? What is there to fear?” - Confucious
 "Project Management is the art of creating the illusion that any outcome is the result of a series of predetermined deliberate acts, when in fact it was just dumb luck." - Dr. Harold Kerzner
 "Middle age is when a guy keeps turning off lights for economical rather than romantic reasons." - Lillian Gordy Carter
+"Because things are the way they are, things will not stay the way they are." - Bertolt Brecht
