--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -79,3 +79,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Project Management is the art of creating the illusion that any outcome is the result of a series of predetermined deliberate acts, when in fact it was just dumb luck." - Dr. Harold Kerzner
 "Middle age is when a guy keeps turning off lights for economical rather than romantic reasons." - Lillian Gordy Carter
 "Because things are the way they are, things will not stay the way they are." - Bertolt Brecht
+"You're only as good as your last haircut." - Fran Lebowitz
+
