--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -4,6 +4,7 @@
 | Badyoczek   | 3584                |
 | Baker, B    | 3533                |
 | Baker, P    | 3386 C:509-768-5922 |
+| Barnes      | 3539                |
 | Belsher     | 3765                |
 | Bertagnolli | 3313                |
 | Brown       | 3034                |
