--- a/index.wiki
+++ b/index.wiki
@@ -22,8 +22,8 @@
 [[TenCommandmentsOfProjectControls]]
 [[IntellectualJokes]]
 [[Earned Value & Progress Tracker Cheat Sheet]]
-
-
+[[STAR154]]
+[[WSUSigmaPi]]
 [[Portfolio to Share with Kevin at Review]]
 
 	
