--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -80,4 +80,5 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "Middle age is when a guy keeps turning off lights for economical rather than romantic reasons." - Lillian Gordy Carter
 "Because things are the way they are, things will not stay the way they are." - Bertolt Brecht
 "You're only as good as your last haircut." - Fran Lebowitz
-
+"Bravery is being the only one who knows you're afraid." - Franklin P. Jones
+"let the root of love be within, of this root can nothing spring but what is good." Augustine of Hippo
