--- a/Blue Week Cadence.wiki
+++ b/Blue Week Cadence.wiki
@@ -24,6 +24,7 @@ Caelus:
 
 = Tuesday =
 BRPC:
+* [ ] 107278 - Update Burn Up Chart (Internal Only) - [[file:///R:/BRPC/107278/Project Controls/Reports/107278 Burn Up Chart.xlsx]]
 * [ ] 107278 - Run and issue cost report
 	Distribution:
 		Fred Fitzhugh
@@ -68,9 +69,6 @@ BRPC:
 Caelus:
 * [ ] Update Project Controls deck for team meeting
 * [ ] Update Project Go Binder
-
-11:00 - 12:00 OTP Team Meeting
-15:00 - 16:00 NDS-1 Team Meeting
 
 * [ ] Complete Time Sheet
 
