--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -8,6 +8,7 @@
 | Belsher     | 3765                |
 | Bertagnolli | 3313                |
 | Brown       | 3034                |
+| Carleton    | 3011                |
 | Caetano     | 3768                |
 | Charette    | 3852                |
 | Crabtree    | 3372                |
