--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -82,3 +82,4 @@ Alcohol, Tobacco and Firearms should be a convenience store, not a government ag
 "You're only as good as your last haircut." - Fran Lebowitz
 "Bravery is being the only one who knows you're afraid." - Franklin P. Jones
 "let the root of love be within, of this root can nothing spring but what is good." Augustine of Hippo
+"I want my children to have all the things I couldn't afford. Then I want to move in with them." - Phyllis Diller
